--- a/proj.win32/10th-fantasy.vcxproj
+++ b/proj.win32/10th-fantasy.vcxproj
@@ -927,6 +927,34 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <Name>external</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\Resources\Background\characterbg.png" />
+    <Image Include="..\Resources\Button\playbtn.png" />
+    <Image Include="..\Resources\Characters\djeamy.png" />
+    <Image Include="..\Resources\Characters\elf.png" />
+    <Image Include="..\Resources\Characters\firemage.png" />
+    <Image Include="..\Resources\Characters\Hem-Mily.png" />
+    <Image Include="..\Resources\Characters\lheen.png" />
+    <Image Include="..\Resources\Characters\succubus.png" />
+    <Image Include="..\Resources\Characters\Theaume.png" />
+    <Image Include="..\Resources\Characters\Thief.png" />
+    <Image Include="..\Resources\Characters\Uggoh.png" />
+    <Image Include="..\Resources\Rectangle.png" />
+    <Image Include="..\Resources\return.png" />
+    <Image Include="..\Resources\Sprite\player.png" />
+    <Image Include="..\Resources\Stuff\boots.png" />
+    <Image Include="..\Resources\Stuff\chest.png" />
+    <Image Include="..\Resources\Stuff\earring.png" />
+    <Image Include="..\Resources\Stuff\helmet.png" />
+    <Image Include="..\Resources\Stuff\necklace.png" />
+    <Image Include="..\Resources\Stuff\ring.png" />
+    <Image Include="bin\10th-fantasy\Debug\Resources\BattleScene.png" />
+    <Image Include="C:\Users\lélé\OneDrive\Bureau\ProjGtech2\GrandProjet\Resources\Button\Shop.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="..\Resources\Sounds\game-show-suspense-waiting.wav" />
+    <Media Include="..\Resources\Sounds\melody-of-nature-main.mp3" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
