--- a/proj.win32/10th-fantasy.vcxproj.filters
+++ b/proj.win32/10th-fantasy.vcxproj.filters
@@ -75,6 +75,12 @@
     <ClCompile Include="..\Classes\src\GameManager.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
+    <ClCompile Include="RaidBossShaDo.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="RaidBossLaiJande.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Z:\proj.win32\main.h" />
@@ -164,6 +170,12 @@
       <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\include\GameManager.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="RaidBossShaDo.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="RaidBossLaiJande.h">
       <Filter>Classes</Filter>
     </ClInclude>
   </ItemGroup>
